--- a/force-grapher/search.html
+++ b/force-grapher/search.html
@@ -4,6 +4,6 @@
     <a style="display: none;" id="btn-found-group" class="bulk-action" href="#add-to-group"><span class="icon-groups"></span> Add Selected to Group</a>
   </div>
   <div id="pile-graph-canvas" style="width: 100%;">
-    <svg id="pile-graph-canvas-svg" width="100%" height="500" data-searchterms="{% for term in result.search_terms %}{{term}}{% if not loop.last %} {% endif %}{%endfor%}"></svg>
+    <svg id="pile-graph-canvas-svg" width="100%" height="500"></svg>
   </div>
 </div>
