Added some HTML to Media Message, compose

--- a/media-message/compose.html
+++ b/media-message/compose.html
@@ -4,3 +4,8 @@
   <li><a href="#">Audio</a></li>
   <li><a href="#">Picture</a></li>
 </ul>
+
+<div id="recorder">
+  <a href="">Record</a> <a href="">Stop</a> <a href="">Save</a> <a href="">Erase</a>
+</div>
+
