Added trvial HTML for testing

--- a/media-message/compose.html
+++ b/media-message/compose.html
@@ -9,3 +9,6 @@
   <a href="">Record</a> <a href="">Stop</a> <a href="">Save</a> <a href="">Erase</a>
 </div>
 
+<div id="media-message">
+  <time>36 Seconds</time>
+</div>
